JBR-5928: add Windows keyboard regression test